# juniper-ml

./: .env.enc  .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  .yamllint.yaml  6fa19732-c51f-41a6-928b-1576286af067.txt  AGENTS.md  CASCOR_CONCURRENCY_PLAN.md  CASCOR_DEMO_TRAINING_ERROR_PLAN-ORIG.md  CASCOR_DEMO_TRAINING_ERROR_PLAN.md  CHANGELOG.md  HANDOFF_v7_CFG_API_REMAINING_2026-05-23.md  JuniperProject.pid  MANIFEST.in  PCALNON.md  README.md  ROOT_CAUSE_PROPOSAL_TRAINING_STALL.md  ROOT_CAUSE_SPIRAL_COMPLEXITY.md  bla  claudey  cly  d5a6cc6a-fa5f-4978-9cef-23c268519b5b.txt  handoff_cascor_concurrency_implementation.md  handoff_cascor_concurrency_phase3.md  juniper-project-pids.txt  prompt010_2026-03-02.md  prompt038_2026-03-19.md  prompt126_2026-05-16.md  pyproject.toml  settings.local.json
juniper-cascor-core/: CHANGELOG.md  README.md  pyproject.toml
juniper-cascor-core/candidate_unit/: __init__.py  candidate_unit.py
juniper-cascor-core/cascor_constants/: __init__.py  constants.py
juniper-cascor-core/cascor_constants/constants_activation/: __init__.py  constants_activation.py
juniper-cascor-core/cascor_constants/constants_api/: __init__.py  constants_api_defaults.py
juniper-cascor-core/cascor_constants/constants_candidates/: __init__.py  constants_candidates.py
juniper-cascor-core/cascor_constants/constants_hdf5/: __init__.py  constants_hdf5.py
juniper-cascor-core/cascor_constants/constants_logging/: __init__.py  constants_logging.py
juniper-cascor-core/cascor_constants/constants_model/: __init__.py  constants_model.py
juniper-cascor-core/cascor_constants/constants_problem/: __init__.py  constants_problem.py
juniper-cascor-core/juniper_cascor_core/: __init__.py
juniper-cascor-core/log_config/: __init__.py  log_config.py
juniper-cascor-core/log_config/logger/: __init__.py  logger.py
juniper-cascor-core/tests/: test_activation.py  test_activation_contracts.py  test_candidate_correlation.py  test_candidate_unit_contracts.py  test_core_behaviors.py  test_package_contracts.py  test_smoke.py  test_utils.py
juniper-cascor-core/utils/: __init__.py  activation.py  utils.py
juniper-ci-tools/: CHANGELOG.md  README.md  pyproject.toml
juniper-ci-tools/juniper_ci_tools/: __init__.py  __main__.py  _version.py  cli.py  cli_coverage_gap_mapper.py  cli_env_drift_check.py  cli_lint_agents_md_header.py  cli_lint_agents_md_version.py  cli_lint_workflow_paths.py  coverage_gap_mapper.py  env_drift_check.py  generate_dep_docs.py  lint_agents_md_header.py  lint_agents_md_version.py  lint_workflow_paths.py
juniper-ci-tools/tests/: conftest.py  test_cli.py  test_coverage_gap_mapper.py  test_env_drift_check.py  test_generate_dep_docs.py  test_lint_agents_md_header.py  test_lint_agents_md_version.py  test_lint_workflow_paths.py
juniper-config-tools/: CHANGELOG.md  README.md  pyproject.toml
juniper-config-tools/juniper_config_tools/: __init__.py  __main__.py  _env_aliases.py
juniper-config-tools/tests/: conftest.py  test_env_with_legacy_alias.py
juniper-doc-tools/: CHANGELOG.md  README.md  pyproject.toml
juniper-doc-tools/juniper_doc_tools/: __init__.py  __main__.py  _ecosystem.py  check_doc_links.py  cli.py
juniper-doc-tools/tests/: conftest.py  test_check_doc_links.py  test_cli.py
juniper-model-core/: CHANGELOG.md  README.md  pyproject.toml
juniper-model-core/juniper_model_core/: __init__.py  _metrics.py  events.py  interfaces.py  lifecycle.py  serialization.py  topology.py  validation.py
juniper-model-core/juniper_model_core/conformance/: __init__.py  fixtures.py  reference.py  suite.py
juniper-model-core/juniper_model_core/crossval/: __init__.py  executor.py  metrics.py  splits.py
juniper-model-core/tests/: test_contract_types.py  test_crossval_executor.py  test_crossval_metrics.py  test_crossval_splits.py  test_dependency_free_import.py  test_reference_conformance.py  test_validation.py
juniper-observability/: CHANGELOG.md  README.md  pyproject.toml
juniper-observability/juniper_observability/: __init__.py  _version.py  constants.py  logging.py  prometheus.py  prometheus_helpers.py  sentry.py  testing.py
juniper-observability/juniper_observability/health/: __init__.py  models.py  probe.py
juniper-observability/juniper_observability/middleware/: __init__.py  metrics_auth.py  prometheus.py  request_id.py
juniper-observability/tests/: test_health_models.py  test_health_probe.py  test_logging.py  test_metrics_auth_middleware.py  test_prometheus_helpers.py  test_prometheus_middleware.py  test_prometheus_utils.py  test_public_api.py  test_request_id_middleware.py  test_sentry.py  test_testing_fixture.py
juniper-service-core/: CHANGELOG.md  README.md  pyproject.toml
juniper-service-core/juniper_service_core/: __init__.py  _version.py  app.py  auth_posture.py  dependency_floors.py  health.py  launcher.py  lifecycle.py  middleware.py  secrets.py  security.py  settings.py
juniper-service-core/juniper_service_core/lifecycle/: __init__.py  manager.py  monitor.py  replay.py  snapshots.py  state_machine.py  sync.py
juniper-service-core/juniper_service_core/routes/: __init__.py  dataset.py  dependencies.py  metrics.py  models.py  network.py  responses.py  snapshots.py  training.py
juniper-service-core/juniper_service_core/websocket/: __init__.py  bridge.py  commands.py  control_security.py  control_stream.py  manager.py  messages.py  (+3 more)
juniper-service-core/tests/: test_app.py  test_auth_posture.py  test_dependency_floors.py  test_launcher.py  test_lifecycle.py  test_lifecycle_coverage.py  test_middleware.py  test_routes_coverage.py  test_secrets.py  test_security.py  test_settings.py  test_smoke.py  test_t2_lifecycle.py  test_t2_replay.py  test_t2_routes_contract.py  test_t2_snapshots.py  test_t2_websocket.py  test_t2_worker_coordinator.py  test_t2_workers.py  test_toplevel_coverage.py  test_websocket_bridge.py  test_websocket_commands.py  test_websocket_control_security.py  test_websocket_control_stream.py  test_websocket_manager_extra.py  test_websocket_messages.py  test_websocket_training_stream.py  test_workers_coverage.py
(+1315 files in other folders)
