[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-ml"
version = "0.1.0"
description = "Juniper - Cascade Correlation Neural Network Research Platform"
readme = "README.md"
license = "MIT"
authors = [{ name = "Paul Calnon" }]
requires-python = ">=3.12"
keywords = ["juniper", "cascade-correlation", "neural-network", "machine-learning", "artificial-intelligence", "research", "dynamic-neural-network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
clients = [
    "juniper-data-client>=0.3.0",
    "juniper-cascor-client>=0.1.0",
]
worker = [
    "juniper-cascor-worker>=0.1.0",
]
all = [
    "juniper[clients,worker]",
]

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-ml"
Repository = "https://github.com/pcalnon/juniper-ml"
Issues = "https://github.com/pcalnon/juniper-ml/issues"
