[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-ml"
version = "0.4.1"
description = "Juniper - Cascade Correlation Neural Network Research Platform"
readme = "README.md"
license = "MIT"
authors = [{ name = "Paul Calnon" }]
requires-python = ">=3.12"
keywords = ["juniper", "cascade-correlation", "neural-network", "machine-learning", "artificial-intelligence", "research", "dynamic-neural-network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
clients = [
    "juniper-data-client>=0.4.0",
    "juniper-cascor-client>=0.3.0",
]
worker = [
    "juniper-cascor-worker>=0.3.0",
]
all = [
    "juniper-ml[clients,worker]",
]

[tool.setuptools]
packages = []

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-ml"
Repository = "https://github.com/pcalnon/juniper-ml"
Issues = "https://github.com/pcalnon/juniper-ml/issues"

# ─────────────────────────────────────────────────────────────────────
# Tool configuration — aligned with the rest of the Juniper fleet per
# notes/CI_PIPELINE_ALIGNMENT_PLAN_2026-04-29.md (§5.4 / §6.1 / Phase 4).
# Scoped to scripts/ + tests/ since juniper-ml has no importable
# package; the hooks themselves enforce the same scope via their
# `files:` filter in .pre-commit-config.yaml.
# ─────────────────────────────────────────────────────────────────────

[tool.black]
line-length = 512
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 512
known_first_party = ["scripts", "tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
files = ["scripts", "tests"]

[tool.coverage.run]
# Coverage tracks the regression surface — the bash-launching scripts
# and the doc-link / worktree validation utilities. The cleanup script
# under scripts/cleanup_session_worktrees.py and the regression test
# files under tests/ are the meaningful units.
branch = true
source = ["scripts", "tests"]
omit = [
    "tests/test_prompt-*.md",
    "*/backups/*",
]

[tool.coverage.report]
# No fail-under for the meta-package — the regression suite is
# narrow and a strict % gate would be more noise than signal. Per
# the alignment plan §10 Phase 4, this is intentional.
show_missing = true
skip_covered = false
