[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-ml"
version = "0.6.0"
description = "Juniper - Cascade Correlation Neural Network Research Platform"
readme = "README.md"
license = "MIT"
authors = [{ name = "Paul Calnon" }]
requires-python = ">=3.12"
keywords = ["juniper", "cascade-correlation", "neural-network", "machine-learning", "artificial-intelligence", "research", "dynamic-neural-network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
clients = [
    "juniper-data-client>=0.4.1",
    "juniper-cascor-client>=0.5.0",
]
worker = [
    "juniper-cascor-worker>=0.4.0",
]
# Shared documentation tooling -- the markdown link validator that every
# Juniper repo's docs CI invokes. Wave 1 of the doc-link migration plan
# (notes/JUNIPER_2026-05-18_JUNIPER-ML_DOC-TOOLS-PYPI-MIGRATION-PLAN.md). Pinned
# inside the 0.1.x range so a future 0.2.x with breaking CLI changes
# doesn't auto-adopt before consumer repos have migrated. Kept as a
# distinct extra for back-compat with `pip install juniper-ml[doc-tools]`
# even though it is also included in the broader `tools` aggregate below.
doc-tools = [
    "juniper-doc-tools>=0.1.0,<0.2.0",
]
servers = [
    "juniper-canopy>=0.5.0",
    "juniper-cascor>=0.5.0",
    "juniper-data>=0.6.0",
]
tools = [
    "juniper-ci-tools>=0.1.0",
    "juniper-config-tools>=0.1.0,<0.2.0",
    "juniper-doc-tools>=0.1.0,<0.2.0",
    "juniper-model-core>=0.1.0,<0.4.0",
    "juniper-observability>=0.2.0",
    "juniper-service-core>=0.2.0,<0.5.0",
]
# The Δt-native recurrence stack (WS-4 / WS-4b): the closed-form variable-Δt
# LMU regressor library, the FastAPI/CLI application that wraps it, and the HTTP
# client for that service. All three are published to PyPI; capped inside the
# 0.1.x range per the pre-1.0 convention so a future 0.2.x doesn't auto-adopt
# before consumers migrate. A dedicated extra (rather than folding the app into
# [servers] and the model/client into [tools]/[clients]) keeps those aggregates'
# semantics intact and lets `pip install juniper-ml[recurrence]` pull the whole stack.
recurrence = [
    "juniper-recurrence-model>=0.1.5,<0.2.0",
    "juniper-recurrence>=0.2.0,<0.3.0",
    "juniper-recurrence-client>=0.2.0,<0.3.0",
]
all = [
    "juniper-ml[clients,worker,servers,tools,recurrence]",
]

[tool.setuptools]
packages = []

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-ml"
Repository = "https://github.com/pcalnon/juniper-ml"
Issues = "https://github.com/pcalnon/juniper-ml/issues"

# ─────────────────────────────────────────────────────────────────────
# Tool configuration — aligned with the rest of the Juniper fleet per
# notes/JUNIPER_2026-04-29_JUNIPER-ECOSYSTEM_CI-PIPELINE-ALIGNMENT-PLAN.md (§5.4 / §6.1 / Phase 4).
# Scoped to scripts/ + tests/ since juniper-ml has no importable
# package; the hooks themselves enforce the same scope via their
# `files:` filter in .pre-commit-config.yaml.
# ─────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Block pytest plugins that get auto-discovered from environments where
# they (or their transitive native deps) are broken. dash.testing.plugin
# transitively imports a non-FT-built psutil that segfaults on free-
# threading CPython 3.14t; pytest_playwright requires `playwright` which
# is often absent. Neither plugin is used by juniper-ml's tests.
addopts = [
    "-p", "no:dash",
    "-p", "no:playwright",
]

[tool.black]
line-length = 512
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 512
known_first_party = ["scripts", "tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
files = ["scripts", "tests"]

[tool.coverage.run]
# Coverage tracks the regression surface — the bash-launching scripts
# and the doc-link / worktree validation utilities. The cleanup script
# under scripts/cleanup_session_worktrees.py and the regression test
# files under tests/ are the meaningful units.
branch = true
source = ["scripts", "tests"]
omit = [
    "tests/test_prompt-*.md",
    "*/backups/*",
]

[tool.coverage.report]
# No fail-under for the meta-package — the regression suite is
# narrow and a strict % gate would be more noise than signal. Per
# the alignment plan §10 Phase 4, this is intentional.
show_missing = true
skip_covered = false
