[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-ci-tools"
version = "0.4.0"
description = "Shared CI / build tooling for the Juniper ML platform (dependency-documentation generator + workflow-script-path lint + AGENTS.md version-drift lint + AGENTS.md header-schema lint)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon" }]
keywords = ["juniper", "ci", "dependency-documentation", "conda", "pip", "lint", "github-actions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
juniper-generate-dep-docs = "juniper_ci_tools.cli:main"
juniper-lint-workflow-paths = "juniper_ci_tools.cli_lint_workflow_paths:main"
juniper-lint-agents-md-version = "juniper_ci_tools.cli_lint_agents_md_version:main"
juniper-lint-agents-md-header = "juniper_ci_tools.cli_lint_agents_md_header:main"

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-ml"
Repository = "https://github.com/pcalnon/juniper-ml"
Issues = "https://github.com/pcalnon/juniper-ml/issues"

[tool.setuptools.packages.find]
include = ["juniper_ci_tools*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p",
    "no:dash",
    "-p",
    "no:playwright",
]
