[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-ci-tools"
version = "0.5.0"
description = "Shared CI / build tooling for the Juniper ML platform (dependency-documentation generator + workflow-script-path lint + AGENTS.md version-drift lint + AGENTS.md header-schema lint + environment floor-drift checker)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon" }]
keywords = ["juniper", "ci", "dependency-documentation", "conda", "pip", "lint", "github-actions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]
dependencies = [
    "PyYAML>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    # packaging powers the env floor-drift checker (Requirement / SpecifierSet /
    # canonicalize_name / Version). It is near-universal (pip / setuptools depend
    # on it). Floored at 22.0 where SpecifierSet.contains returns False (rather
    # than raising) on a non-PEP440 operand -- the checker also catches
    # InvalidVersion defensively, so this is belt-and-suspenders.
    "packaging>=22.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
juniper-generate-dep-docs = "juniper_ci_tools.cli:main"
juniper-lint-workflow-paths = "juniper_ci_tools.cli_lint_workflow_paths:main"
juniper-lint-agents-md-version = "juniper_ci_tools.cli_lint_agents_md_version:main"
juniper-lint-agents-md-header = "juniper_ci_tools.cli_lint_agents_md_header:main"
juniper-env-drift-check = "juniper_ci_tools.cli_env_drift_check:main"

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-ml"
Repository = "https://github.com/pcalnon/juniper-ml"
Issues = "https://github.com/pcalnon/juniper-ml/issues"

[tool.setuptools.packages.find]
include = ["juniper_ci_tools*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-p",
    "no:dash",
    "-p",
    "no:playwright",
]

[tool.ruff]
line-length = 512
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N"]
# N803/N806: ecosystem NPZ Data-Contract names (X, X_train, X_val, y) are
# intentionally non-lowercase; pep8-naming on them fights the cross-repo
# convention. Kept uniform across all six juniper-ml sub-packages.
ignore = ["N803", "N806"]
