[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-config-tools"
version = "0.1.0"
description = "Stdlib-only config helpers for the Juniper ML platform (env-var alias-with-deprecation resolver)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon" }]
keywords = ["juniper", "config", "environment-variables", "deprecation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-ml"
Repository = "https://github.com/pcalnon/juniper-ml"
Issues = "https://github.com/pcalnon/juniper-ml/issues"

[tool.setuptools.packages.find]
include = ["juniper_config_tools*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p",
    "no:dash",
    "-p",
    "no:playwright",
]
