[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-doc-tools"
version = "0.1.1"
description = "Shared documentation tooling for the Juniper ML platform (markdown link validator with cross-repo and ecosystem-root awareness)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon" }]
keywords = ["juniper", "documentation", "markdown", "lint", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
juniper-check-doc-links = "juniper_doc_tools.cli:main"

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-ml"
Repository = "https://github.com/pcalnon/juniper-ml"
Issues = "https://github.com/pcalnon/juniper-ml/issues"

[tool.setuptools.packages.find]
include = ["juniper_doc_tools*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:dash",
    "-p", "no:playwright",
]
filterwarnings = ["ignore::pytest.PytestUnraisableExceptionWarning"]

[tool.ruff]
# Ruff caps line-length at 320; juniper-ml's convention of 512 covers
# black/flake8/markdownlint only, where it parses fine. 320 is wide
# enough for the validator's long error-message strings without
# generating false positives.
line-length = 320
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N"]
# N803/N806: ecosystem NPZ Data-Contract names (X, X_train, X_val, y) are
# intentionally non-lowercase; pep8-naming on them fights the cross-repo
# convention. Kept uniform across all six juniper-ml sub-packages.
ignore = ["N803", "N806"]
