[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-model-core"
dynamic = ["version"]
description = "Shared model-contract interfaces (TrainableModel / GrowableModel ABCs, the TrainingEvent vocabulary, ModelSerializer, the describe_topology() schema) plus a reusable conformance test kit for the Juniper ML platform."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon" }]
keywords = ["juniper", "neural-network", "machine-learning", "model-interface", "abc", "conformance-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# The model CONTRACT has no third-party runtime dependency: numpy is referenced only in
# type annotations (under TYPE_CHECKING). The conformance KIT does use numpy at runtime --
# see the [conformance] extra. Keeping `import juniper_model_core` dependency-free lets the
# TestPyPI publish-verify do a clean --no-deps import check with no pypi.org fallback
# (the target-squatting-safe verify policy the ecosystem enforces).
dependencies = []

[project.optional-dependencies]
# Everything a consumer needs to RUN the conformance kit against their own model.
conformance = [
    "numpy>=1.24",
    "pytest>=8.0",
]
# Everything needed to develop / test juniper-model-core itself.
test = [
    "numpy>=1.24",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-ml"
Repository = "https://github.com/pcalnon/juniper-ml"
Issues = "https://github.com/pcalnon/juniper-ml/issues"

[tool.setuptools.dynamic]
version = { attr = "juniper_model_core._version.__version__" }

[tool.setuptools.packages.find]
include = ["juniper_model_core*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Block pytest plugins that get auto-discovered from environments where they (or their
# transitive native deps) are broken: dash.testing.plugin transitively imports a non-FT-built
# psutil that segfaults on free-threading CPython 3.14t; pytest_playwright requires playwright
# which is often absent. Neither is used here. (Ecosystem-standard autoload SIGSEGV defense.)
addopts = ["-ra", "--strict-markers", "--strict-config", "-p", "no:dash", "-p", "no:playwright"]

[tool.ruff]
line-length = 512
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N"]
