[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-observability"
version = "0.4.0"
description = "Shared observability primitives (health models, logging, middleware, Sentry, Prometheus) for the Juniper ML platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon" }]
keywords = ["juniper", "observability", "health", "metrics", "logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.0",
    "starlette>=0.27",
]

[project.optional-dependencies]
prometheus = ["prometheus-client>=0.20.0"]
sentry = ["sentry-sdk[fastapi]>=2.0.0"]
all = ["juniper-observability[prometheus,sentry]"]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "prometheus-client>=0.20.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-ml"
Repository = "https://github.com/pcalnon/juniper-ml"
Issues = "https://github.com/pcalnon/juniper-ml/issues"

[tool.setuptools.packages.find]
include = ["juniper_observability*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    # Block pytest plugins whose entrypoints get auto-discovered from the
    # active env even when this project does not use them. dash.testing.plugin
    # and pytest_playwright are autoloaded by pytest from installed
    # distributions; in envs where their runtime deps are missing (e.g. the
    # legacy JuniperCascor env had pytest-playwright without playwright), the
    # import errors during pytest startup before any test can run. This block
    # mirrors the defense already in juniper-cascor, juniper-canopy, and the
    # parent juniper-ml pyproject. See juniper-ml memory entry "Pytest
    # autoload SIGSEGV defense 2026-05-01".
    "-p", "no:dash",
    "-p", "no:playwright",
]
filterwarnings = ["ignore::pytest.PytestUnraisableExceptionWarning"]

[tool.ruff]
line-length = 512
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N"]
