[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-service-core"
version = "0.3.0"
description = "Shared service-tier scaffolding (FastAPI app factory, settings base, generic routes) for Juniper ML model services"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon" }]
keywords = ["juniper", "service", "fastapi", "scaffolding", "middleware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # The lifecycle body drives a model-core TrainableModel via its TrainingLifecycleBase /
    # TrainingEvent contracts. PUBLISH-FIRST: juniper-model-core must be on PyPI before
    # juniper-service-core is published; in the monorepo, CI installs it editable from the
    # sibling subdir first (see .github/workflows/ci-service-core.yml).
    "juniper-model-core>=0.1.0",
    # The generic routes (juniper_service_core.routes) convert inline request arrays to numpy
    # at the model boundary (model-core D2 -- numpy at the interface); model-core's conformance
    # kit (used by the contract tests) also imports numpy. numpy loads only when `.routes` is
    # accessed, so the dependency-free top-level `import juniper_service_core` still holds.
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-ml"
Repository = "https://github.com/pcalnon/juniper-ml"
Issues = "https://github.com/pcalnon/juniper-ml/issues"

[tool.setuptools.packages.find]
include = ["juniper_service_core*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    # Block pytest plugins whose entrypoints get auto-discovered from the
    # active env even when this project does not use them. dash.testing.plugin
    # and pytest_playwright are autoloaded by pytest from installed
    # distributions; in envs where their runtime deps are missing (e.g. the
    # legacy JuniperCascor env had pytest-playwright without playwright), the
    # import errors during pytest startup before any test can run. This block
    # mirrors the defense already in juniper-cascor, juniper-canopy, and the
    # parent juniper-ml pyproject. See juniper-ml memory entry "Pytest
    # autoload SIGSEGV defense 2026-05-01".
    "-p", "no:dash",
    "-p", "no:playwright",
]
filterwarnings = ["ignore::pytest.PytestUnraisableExceptionWarning"]

[tool.coverage.run]
source_pkgs = ["juniper_service_core"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 512
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N"]
# N803/N806: ecosystem NPZ Data-Contract names (X, X_train, X_val, y) are
# intentionally non-lowercase; pep8-naming on them fights the cross-repo
# convention. Kept uniform across all six juniper-ml sub-packages.
ignore = ["N803", "N806"]
